2013-01-07  Andy Buckley  <andy.buckley@cern.ch>

	* Removing Types.h in favour of split Utils.h and Exceptions.h

	* include/LHAPDF/Paths.h: Adding path searching machinery (using Boost.Filesystem).

2013-01-02  Andy Buckley  <andy.buckley@cern.ch>

	* Adding some of the necessary infrastructure for subgrids, and
	rewriting the grid format parser to handle separated subgrid
	blocks. Boost.MultiArray being used for the internal storage in
	place of the dynamically allocated C arrays. Metadata methods are
	currently disabled for porting to the cascading Info system.

2013-01-01  Andy Buckley  <andy.buckley@cern.ch>

	* Major restructuring of the API: lots of subtle problems with the
	first attempt, and room for improvement. Painful, but worth the
	reworking to get it right. Lots left to do... see the TODO and
	DESIGN files for the ideas and tasks.

2012-10-22  Andy Buckley  <andy.buckley@cern.ch>

	* Start of autotools build system on top of initial summer student
	work by Martin and Steve.