@@ -4,10 +4,10 @@
 /* LHAPDF version string */
 #undef LHAPDF_VERSION
 
-/* Was LHAPDF built in low-memory mode? */
-#undef LHAPDF_LOWMEM
+/// @todo Add functions for version querying?
 
-/* How many LHAPDF PDF sets can be used concurrently? */
-#undef LHAPDF_NMXSET
+/// @todo Other functions?
+
+/// @todo Include standard headers (PDF.h, etc.)?
 
 #endif
